timeouts as parameters

--- a/src/application.conf
+++ b/src/application.conf
@@ -18,6 +18,9 @@ sw {
   next = "akka.tcp://RemoteSystem@192.168.56.2:9010/user/Server2"
   init = true
   debug = true
-  pingloss = false
-  pongloss = false
+  pingLoss = false
+  pongLoss = false
+  forwardTimeout = 1000
+  csTimeout = 1000
+  lazyTimeout = 5000
 }
